# braghook

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  braghook.py  noxfile.py  pyproject.toml  tox.ini
.github/workflows/: python-tests.yml
src/braghook/: braghook.py  cli.py  config_ctrl.py  webhook_builder.py
tests/: braghook_test.py  cli_test.py  config_ctrl_test.py  config_test.py  webhook_test.py
